# mutual_information_cuda

./: .gitattributes  README  sample_output_screenshot
ImageMutualInformation/: CMakeLists.txt  ImageMutualInformation1.cxx  README  cudaImageMutualInformation.cxx  cudaImageMutualInformation256bin.cu  cudaImageMutualInformation64bin.cu  main.cpp  mutual_information_common.h
MattesMutualInformation/: CMakeLists.txt  cudaMattesMutualInformation.cxx  cudaMattesMutualInformation64bin.cu  cudaMattesMutualInformation64bin.cu~  itkMattesMutualInformation.cxx  itkMattesMutualInformation.cxx~  main.cpp  mattesMutualInformation.nvvp  mutual_information_common.h
nvidia profiler files/: ImageMutualInformation.nvvp  MattesMutualInfo.nvvp
sample_build_ImageMutualInformation/: CMakeCache.txt  Makefile  cmake_install.cmake
sample_build_MattesMutualInformation/: CMakeCache.txt  Makefile  cmake_install.cmake
